argocd/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: argocd
  name: argocd
